--- a/bigday/static/bigday/css/creative.css
+++ b/bigday/static/bigday/css/creative.css
@@ -13,11 +13,15 @@ body {
 
 body {
     font-family: Merriweather,'Helvetica Neue',Arial,sans-serif;
+    background-color: #000; /* 🌙 fond noir */
+    color: #1A1A1A;
 }
+
+/* ---- ACCENT (bleu canard) ---- */
 
 hr {
     max-width: 50px;
-    border-color: #f05f40;
+    border-color: #0A9396;   /* bleu canard */
     border-width: 3px;
 }
 
@@ -26,7 +30,7 @@ hr.light {
 }
 
 a {
-    color: #f05f40;
+    color: #0A9396;          /* liens bleu canard */
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
@@ -34,7 +38,7 @@ a {
 
 a:hover,
 a:focus {
-    color: #eb3812;
+    color: #006D77;          /* bleu canard plus foncé au survol */
 }
 
 h1,
@@ -52,9 +56,9 @@ p {
     line-height: 1.5;
 }
 
-
+/* zones "accent" type .bg-primary (ex: Programme / Mairie / Cérémonie si tu les utilises) */
 .bg-primary {
-    background-color: #f05f40;
+    background-color: #0A9396;
 }
 
 .bg-primary a {
@@ -71,6 +75,11 @@ p {
     color: rgba(255,255,255,.7);
 }
 
+/* .text-primary pour les titres comme "couple name's big day" */
+.text-primary {
+    color: #0A9396;
+}
+
 section {
     padding: 50px 0;
 }
@@ -83,25 +92,27 @@ aside {
     padding: 0;
 }
 
+/* ---- NAVBAR ---- */
+
 .navbar-default {
-    border-color: rgba(34,34,34,.05);
     font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
-    background-color: #fff;
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
+    background-color: #000; /* navbar noire */
+    border-color: #000;
 }
 
 .navbar-default .navbar-header .navbar-brand {
     text-transform: uppercase;
     font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
     font-weight: 700;
-    color: #f05f40;
+    color: #0A9396;          /* brand en bleu canard */
 }
 
 .navbar-default .navbar-header .navbar-brand:hover,
 .navbar-default .navbar-header .navbar-brand:focus {
-    color: #eb3812;
+    color: #006D77;          /* brand plus foncé au hover */
 }
 
 .navbar-default .nav > li>a,
@@ -109,75 +120,52 @@ aside {
     text-transform: uppercase;
     font-size: 13px;
     font-weight: 700;
-    color: rgb(28,56,81);
+    color: #ffffff;   
 }
 
 .navbar-default .nav > li>a:hover,
 .navbar-default .nav>li>a:focus:hover {
-    color: #f05f40;
+    color: #000;                         /* texte noir au survol */
+    background-color: #0A9396;           /* 💙 bleu canard au survol */
 }
 
 .navbar-default .nav > li.active>a,
 .navbar-default .nav>li.active>a:focus {
-    color: #f05f40!important;
-    background-color: transparent;
+    color: #fff;
+    background-color: #0A9396;      /* Accueil actif en bleu canard */
 }
 
 .navbar-default .nav > li.active>a:hover,
 .navbar-default .nav>li.active>a:focus:hover {
-    background-color: transparent;
+    color: #fff;
+    background-color: #006D77;      /* un bleu canard un peu plus foncé au survol */
 }
 
-@media(min-width:768px) {
-    .navbar-default {
-        border-color: rgba(28,56,81,.3);
-        background-color: transparent;
-    }
-
-    .navbar-default .navbar-header .navbar-brand {
-        color: rgba(28,56,81,.7);
-    }
-
-    .navbar-default .navbar-header .navbar-brand:hover,
-    .navbar-default .navbar-header .navbar-brand:focus {
-        color: #fff;
-    }
-
+@media (min-width:768px) {
     .navbar-default .nav > li>a,
     .navbar-default .nav>li>a:focus {
-        color: rgba(28,56,81,.7);
+        color: #ffffff;   /* blanc aussi en version desktop */
     }
 
     .navbar-default .nav > li>a:hover,
     .navbar-default .nav>li>a:focus:hover {
-        color: rgb(28,56,81);
+        color: #000;
+        background-color: #0A9396;       /* 💙 bleu canard au survol en desktop */
     }
 
+    /* navbar affix reste dark */
     .navbar-default.affix {
-        border-color: rgba(34,34,34,.05);
-        background-color: #fff;
-    }
-
-    .navbar-default.affix .navbar-header .navbar-brand {
-        font-size: 14px;
-        color: #f05f40;
-    }
-
-    .navbar-default.affix .navbar-header .navbar-brand:hover,
-    .navbar-default.affix .navbar-header .navbar-brand:focus {
-        color: #eb3812;
+        background-color: #000;
+        border-color: #000;
     }
 
     .navbar-default.affix .nav > li>a,
     .navbar-default.affix .nav>li>a:focus {
-        color: rgb(28,56,81);
-    }
-
-    .navbar-default.affix .nav > li>a:hover,
-    .navbar-default.affix .nav>li>a:focus:hover {
-        color: #f05f40;
+        color: #ffffff;
     }
 }
+
+/* ---- HEADER ---- */
 
 header {
     position: relative;
@@ -194,7 +182,12 @@ header {
 
 #main-header {
     background-image: url('../images/wedding-selfie-better.jpg');
+    background-repeat: no-repeat;
+    background-position: center top;   /* tu peux ajuster plus tard */
+    background-size: cover;            /* laisse le header gérer le resize */
+    min-height: 80vh;                  /* 👉 occupe ~80% de la hauteur d'écran */
 }
+
 
 header .header-content {
     position: relative;
@@ -262,6 +255,8 @@ header .header-content .header-content-inner p {
     margin-top: 0;
 }
 
+/* ---- BLOCS / PROGRAMME / ETC. ---- */
+
 .service-box {
     margin: 50px auto 0;
     max-width: 400px;
@@ -288,12 +283,21 @@ header .header-content .header-content-inner p {
     }
 }
 
+/* ---- PORTFOLIO / OVERLAYS ---- */
 
 .portfolio-box {
     display: block;
     position: relative;
     margin: 0 auto;
     max-width: 650px;
+}
+
+/* Forcer les images des tuiles Mairie / Houppa / Soirée à avoir la même taille */
+.portfolio-box img {
+    width: 100%;
+    height: 220px;      /* tu peux ajuster cette valeur : 200, 250, etc. */
+    object-fit: cover;  /* recadre proprement sans déformer */
+    display: block;
 }
 
 .portfolio-box .portfolio-box-caption {
@@ -305,7 +309,7 @@ header .header-content .header-content-inner p {
     text-align: center;
     color: #fff;
     opacity: 0;
-    background: rgba(240,95,64,.9);
+    background: rgba(10,147,150,.9);   /* overlay bleu canard */
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
@@ -349,18 +353,18 @@ header .header-content .header-content-inner p {
     }
 }
 
+/* ---- TITRES / CALL TO ACTION ---- */
+
 .call-to-action h2 {
     margin: 0 auto 20px;
-}
-
-.text-primary {
-    color: #f05f40;
 }
 
 .no-gutter > [class*=col-] {
     padding-right: 0;
     padding-left: 0;
 }
+
+/* ---- BOUTONS ---- */
 
 .btn-default {
     border-color: #fff;
@@ -388,37 +392,11 @@ header .header-content .header-content-inner p {
     background-image: none;
 }
 
-.btn-default.disabled,
-.btn-default[disabled],
-fieldset[disabled] .btn-default,
-.btn-default.disabled:hover,
-.btn-default[disabled]:hover,
-fieldset[disabled] .btn-default:hover,
-.btn-default.disabled:focus,
-.btn-default[disabled]:focus,
-fieldset[disabled] .btn-default:focus,
-.btn-default.disabled.focus,
-.btn-default[disabled].focus,
-fieldset[disabled] .btn-default.focus,
-.btn-default.disabled:active,
-.btn-default[disabled]:active,
-fieldset[disabled] .btn-default:active,
-.btn-default.disabled.active,
-.btn-default[disabled].active,
-fieldset[disabled] .btn-default.active {
-    border-color: #fff;
-    background-color: #fff;
-}
-
-.btn-default .badge {
-    color: #fff;
-    background-color: #222;
-}
-
+/* Boutons principaux -> bleu canard */
 .btn-primary {
-    border-color: #f05f40;
+    border-color: #0A9396;
     color: #fff;
-    background-color: #f05f40;
+    background-color: #0A9396;
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
@@ -430,9 +408,9 @@ fieldset[disabled] .btn-default.active {
 .btn-primary:active,
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
-    border-color: #ed431f;
+    border-color: #006D77;
     color: #fff;
-    background-color: #ee4b28;
+    background-color: #006D77;
 }
 
 .btn-primary:active,
@@ -459,12 +437,12 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-    border-color: #f05f40;
-    background-color: #f05f40;
+    border-color: #0A9396;
+    background-color: #0A9396;
 }
 
 .btn-primary .badge {
-    color: #f05f40;
+    color: #0A9396;
     background-color: #fff;
 }
 
@@ -479,6 +457,8 @@ fieldset[disabled] .btn-primary.active {
 .btn-xl {
     padding: 15px 30px;
 }
+
+/* ---- DIVERS ---- */
 
 ::-moz-selection {
     text-shadow: none;
@@ -504,10 +484,62 @@ img::-moz-selection {
 
 body {
     webkit-tap-highlight-color: #222;
-
 }
 
 #footer {
     background-color: #222;
     padding-bottom: 30px;
+}
+
+/* ---- SECTIONS H O U P P A  &  S O I R É E ---- */
+
+/* Texte en blanc pour contraste sur le fond bleu canard */
+#houppa-event,
+#soiree-event {
+    color: #fff;
+}
+
+/* Rendre les liens lisibles sur fond coloré */
+#houppa-event a,
+#soiree-event a {
+    color: #fff;
+    text-decoration: underline;
+}
+
+#houppa-event a:hover,
+#soiree-event a:hover {
+    color: #E0FBFC; /* blanc légèrement bleuté au survol */
+}
+
+/* Barre (hr.primary) visible sur les fonds colorés */
+#houppa-event hr.primary,
+#soiree-event hr.primary {
+    border-color: #fff;
+}
+
+/* Adresses plus propres dans les blocs de programme */
+dl.lead address {
+    margin: 0;
+    font-style: normal;
+    line-height: 1.4;
+}
+
+/* ---- MOBILE ---- */
+@media (max-width: 767px) {
+    #main-header {
+        background-size: cover;       /* parfait pour mobile */
+        background-position: center top;
+        min-height: 80vh;
+    }
+}
+
+/* ---- DESKTOP ---- */
+@media (min-width: 768px) {
+    #main-header {
+        background-size: contain;     /* montre toute la photo */
+        background-position: top center;
+        background-repeat: no-repeat;
+        min-height: 100vh;            /* plein écran */
+        background-color: #000;       /* bandes invisibles car fond noir */
+    }
 }
