--- a/bigday/templates/home.html
+++ b/bigday/templates/home.html
@@ -21,19 +21,13 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="#main-header">Home</a>
+                        <a class="page-scroll" href="#main-header">Accueil</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#event">Event</a>
+                        <a class="page-scroll" href="#event">Programme</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#niagara">Niagara-on-the-Lake</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#other-stuff">Everything Else</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#contact">Contactez-nous</a>
                     </li>
                 </ul>
             </div>
@@ -45,110 +39,98 @@
     <header id="main-header">
         <div class="header-content">
             <div class="header-content-inner">
-                <h1>We did it!!</h1>
                 {% comment %}
                 <hr>
                 <h2>It's wedding week!</h2>
-                <a href="#welcome" class="btn btn-info btn-xl page-scroll">Welcome</a>
-                <a href="#event" class="btn btn-primary btn-xl page-scroll">Friday</a>
-                <a href="#saturday-event" class="btn btn-success btn-xl page-scroll">Saturday</a>
+                <a href="#welcome" class="btn btn-info btn-xl page-scroll">Bienvenue</a>
+                <a href="#event" class="btn btn-primary btn-xl page-scroll">Mairie</a>
+                <a href="#saturday-event" class="btn btn-success btn-xl page-scroll">Cérémonie</a>
                 {% endcomment %}
             </div>
         </div>
     </header>
+
     <section class="bg-info" id="welcome">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Welcome!</h2>
+                    <h2 class="section-heading">Bienvenue!</h2>
                     <hr>
                     <p>
-                        Hello friends and family! It's the week of the wedding!
+                        Le jour J approche!
                     </p>
                     <p>
-                        If you're looking for information about the event, look no further!
-                        Please see below for all the details regarding <a href="#event" class="page-scroll">Friday night's welcome party</a> and <a href="#saturday-event" class="page-scroll">Saturday's event</a>.
+                        Si vous cherchez des infos sur le déroulé du mariage, vous êtes au bon endroit. Le programme sera complété et <strong style="color: red;">mis à jour très bientôt</strong>. Pensez à revenir régulièrement.
+                        Merci de confirmer votre présence via le lien que vous avez reçu.
                     </p>
                     <p>
-                        To get added to the wedding whatsapp group first create an account and then send an
-                        email to <a href="mailto:{{ support_email }}">{{ support_email }}</a>.
-                        Also, the current front-runner for the wedding hashtag (if you're into that sort of thing) is #getlukky.
+                        On a hâte de vous retrouver et de célébrer ça ensemble !
                     </p>
-                    <p>
-                        Looking forward to seeing everyone soon!
-                    </p>
-                    <p class="pull-right">- Cory and Rowena</p>
+                    <p class="pull-right">- Juliette et Jonathan</p>
                 </div>
             </div>
         </div>
     </section>
+
     <section class="no-padding" id="navigation">
         <div class="container-fluid">
             <div class="row no-gutter">
+
+                <!-- Mairie -->
                 <div class="col-lg-4 col-sm-6">
                     <a href="#event" class="portfolio-box page-scroll">
                         <img src="{% static 'bigday/images/ravine-nav.jpg' %}" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-name">
-                                    The Event
+                                    Mairie
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
+
+                <!-- Houppa -->
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#niagara" class="portfolio-box page-scroll">
+                    <a href="#houppa-event" class="portfolio-box page-scroll">
+                        <img src="{% static 'bigday/images/syna.jpg' %}" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-name">
+                                    Houppa
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+                <!-- Soirée -->
+                <div class="col-lg-4 col-sm-6">
+                    <a href="#soiree-event" class="portfolio-box page-scroll">
                         <img src="{% static 'bigday/images/prince-of-wales-hotel-nav.jpg' %}" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-name">
-                                    Niagara-on-the-Lake
+                                    Soirée
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="#story" class="portfolio-box page-scroll">
-                        <img src="{% static 'bigday/images/twelve-apostles-nav.jpg' %}" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-name">
-                                    Our Story
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
+
             </div>
         </div>
     </section>
+
     {% include 'partials/event.html' %}
-    <section id="niagara">
-        {% include 'partials/niagara.html' %}
-    </section>
-{% comment %}
-        {% include 'partials/wedding-party.html' %}
-{% endcomment %}
-    <section id="other-stuff" class="bg-primary">
-        {% include 'partials/misc.html' %}
-    </section>
-    <section id="gifts">
-        {% include 'partials/gifts.html' %}
-    </section>
-    <section id="story" class="bg-dark">
-        {% include 'partials/story.html' %}
-    </section>
-    {% include 'partials/proposal.html' %}
-    {% include 'partials/save-the-dates.html' %}
+
     <section id="contact" class="bg-dark">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Contact us!</h2>
+                    <h2 class="section-heading">Contactez-nous!</h2>
                     <hr class="primary">
-                    <p>If you have any questions don't hesitate to reach out!</p>
+                    <p>Si vous avez la moindre question, n'hésitez pas à nous contacter !</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
@@ -159,6 +141,7 @@
     </section>
     {% endblock %}
 {% endblock %}
+
 {% block page_js %}
     <!-- Plugin JavaScript -->
     <!-- Easing is for the vertical scroll animations -->
