--- a/bigday/templates/partials/event.html
+++ b/bigday/templates/partials/event.html
@@ -2,104 +2,89 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 ">
-                <h2 class="section-heading text-center">Friday Night Welcome</h2>
+                <h2 class="section-heading text-center">Mairie</h2>
                 <hr class="primary">
                 <dl class="dl-horizontal lead">
-                    <dt>What</dt>
-                    <dd>
-                        Come join us for a few celebratory drinks at a local Niagara brewery
-                    </dd>
-                    <dt>When</dt>
-                    <dd>Friday, July 1 at 9:00 pm</dd>
-                    <dt>Where</dt>
+                    <dt>Quand</dt>
+                    <dd>Vendredi 9 janvier 2026 à 11h</dd>
+
+                    <dt>Adresse</dt>
                     <dd>
                         <address>
-                            Oast House Brewers<br>
-                            <a href="https://goo.gl/maps/rDqRZ4uzpGq">2017 Niagara Stone Rd, Niagara-on-the-Lake,
-                                ON L0S 1J0, Canada</a><br>
-                            Phone: +1 905-262-8463
+                            Hôtel de Ville de Charenton-le-Pont<br>
+                            <a href="https://www.google.com/maps/dir//Hôtel+de+Ville,+48+Rue+de+Paris,+94220+Charenton-le-Pont/@48.8220374,2.4058804,15z/data=!3m1!5s0x47e672fb8bb24067:0x20361c6c4eecfe90!4m18!1m8!3m7!1s0x47e672fc6b55f2a7:0xd13c253bce39dbe8!2sHôtel+de+Ville!8m2!3d48.8197164!4d2.4160958!15sChhtYWlyaWUgY2hhcmVudG9uIGxlIHBvbnRaGiIYbWFpcmllIGNoYXJlbnRvbiBsZSBwb250kgEJY2l0eV9oYWxsmgEjQ2haRFNVaE5NRzluUzBWSlEwRm5TVU5hYWt4dWJVcFJFQUWqAU0KCy9nLzF0ajFsdjUzEAEyHhABIhrx7xGv_8XWT04hOGG5NmKzulSI50DO_SyI8jIcEAIiGG1haXJpZSBjaGFyZW50b24gbGUgcG9udOABAPoBBAhGEDQ!16s%2Fg%2F11btmq820h!4m8!1m0!1m5!1m1!1s0x47e672fc6b55f2a7:0xd13c253bce39dbe8!2m2!1d2.4160958!2d48.8197164!3e0?entry=ttu&g_ep=EgoyMDI1MTExNy4wIKXMDSoASAFQAw%3D%3D">
+                                48, rue de Paris
+                            </a><br>
+                            94220 Charenton-le-Pont
                         </address>
-
                     </dd>
-                    <dt>Attire</dt>
-                    <dd>Casual (Canadiana encouraged)</dd>
-                    <dt>Transportation</dt>
-                    <dd>Transportation is not provided. Please plan responsibly.</dd>
-                    <dt>Parking</dt>
-                    <dd>Overflow parking is available at the church across the street</dd>
-                    <dt>Other info</dt>
+
+                    <dt>Transports</dt>
+                    <dd>Métro ligne 8, arrêt Charenton-écoles</dd>
+
+                    <dt>After Mairie</dt>
                     <dd>
-                        We are doing our rehearsal dinner at the same venue.
-                        The brewery will have a patio open to the public at this time and guests should feel free
-                        to come early and enjoy food and drink before the official party starts
-                        (though we've been told it might get crowded).
-                        We’ll open the doors whenever we finish eating but by 9 at the latest.
+                        Plus de détails à venir
                     </dd>
                 </dl>
             </div>
         </div>
     </div>
 </section>
-<section id="saturday-event" class="bg-info">
+
+<section id="houppa-event" style="background-color:#0A9396;">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 ">
-                <h2 class="section-heading text-center">Saturday Ceremony and Reception</h2>
+                <h2 class="section-heading text-center">Houppa</h2>
                 <hr class="primary">
                 <dl class="dl-horizontal lead">
-                    <dt>What</dt>
-                    <dd>Celebrate our marriage at a vineyard in classic Niagara style</dd>
-                    <dt>When</dt>
-                    <dd>Saturday, July 2, at 4:15 pm</dd>
-                    <dt>Where</dt>
+                    <dt>Lieu</dt>
+                    <dd>Détails à venir</dd>
+
+                    <dt>Quand</dt>
+                    <dd>Dimanche 11 janvier (heure à venir)</dd>
+                    <!--
+                    <dt>Adresse</dt>
                     <dd>
                         <address>
-                            Ravine Vineyard<br>
-                            <a href="https://goo.gl/maps/dSSnoZGtUyK2">1366 York Rd, St. Davids, ON L0S 1P0, Canada</a><br>
-                            Phone: +1 289-868-9627
+                            <a href="https://www.google.com/maps/dir//Synagogue+Charenton+Saint-Maurice,+Rue+des+Bordeaux,+Charenton-le-Pont/@48.8220374,2.4058804,15z/data=!4m9!4m8!1m0!1m5!1m1!1s0x47e672f85eeff03b:0x2acecf6fd83efdd!2m2!1d2.4104816!2d48.822272!3e0?entry=ttu">
+                                41, rue des Bordeaux
+                            </a><br>
+                            94220 Charenton-le-Pont
                         </address>
                     </dd>
-                    <dt>Attire</dt>
-                    <dd>Cocktail. Be warned: it is a vineyard, there is grass, and your stilettos may sink deep
-                        into it.
-                    </dd>
-                    <dt>Transportation</dt>
-                    <dd>There will be three bus pick up options for guests:
-                        <ul>
-                            <li><a href="https://goo.gl/maps/5gX1Hwb5syx">White Oaks</a>: <strong>3:30pm</strong>
-                            <li><a href="https://goo.gl/maps/o8KTZQg51Mt">Hilton Garden Inn</a>: <strong>3:45pm</strong>
-                            <li><a href="https://goo.gl/maps/9KcZQProDN12">Fort George</a> (Downtown Niagara-on-the-Lake): <strong>3:45pm</strong>
-                        </ul>
-                        Buses will be returning to the hotels and downtown Niagara-on-the-Lake throughout the night.
-
-                    </dd>
-                    <dt>Parking</dt>
-                    <dd>Parking is available on-site at Ravine</dd>
-                    {% comment %}
-                    <dt>Afterwards</dt>
-                    <dd>
-                        Guests wishing to continue celebrating with Cory and Rowena after the reception can
-                        head to the <a href="https://goo.gl/maps/a9uGVVQwqBT2">Sandtrap Pub and Grill</a>.
-                        Buses will also be dropping off there.
-                    </dd>
-                    {% endcomment %}
+                    -->
                 </dl>
             </div>
         </div>
     </div>
-{% comment %}
+</section>
+
+<section id="soiree-event" style="background-color:#006D77;">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 ">
-                <h2 class="section-heading text-center">Sunday</h2>
+                <h2 class="section-heading text-center">Soirée</h2>
                 <hr class="primary">
-                <p>
-                    Cory and Rowena will be headed to Niagara Falls on Sunday.
-                    Anyone who wants to join them is welcome.
-                    Details will be coordinated via Whatsapp.
-                </p>
+                <dl class="dl-horizontal lead">
+                    <dt>Lieu</dt>
+                    <dd>Hôtel Kimpton St Honoré</dd>
+
+                    <dt>Quand</dt>
+                    <dd>Dimanche 11 janvier à partir de 18h</dd>
+
+                    <dt>Adresse</dt>
+                    <dd>
+                        <address>
+                            <a href="https://www.google.com/maps/place/Kimpton+St+Honoré+Paris/">
+                                27–29, boulevard des Capucines
+                            </a><br>
+                            75002 Paris
+                        </address>
+                    </dd>
+                </dl>
             </div>
         </div>
     </div>
-{% endcomment %}
 </section>
