mise à jour event v2

--- a/bigday/templates/partials/event.html
+++ b/bigday/templates/partials/event.html
@@ -24,11 +24,12 @@
 
                     <dt>After Mairie</dt>
                     <dd>
-    Après la mairie, retrouvons-nous pour un buffet déjeunatoire à l'espace Toffoli au
-    (<a href="https://www.google.com/maps/place/Espace+TOFFOLI/@48.8198189,2.4109002,16z/data=!3m1!4b1!4m6!3m5!1s0x47e672f94f01b00b:0x4af157a05e16b54b!8m2!3d48.8198189!4d2.4134751!16s%2Fg%2F11f3jjpkz5?entry=ttu&g_ep=EgoyMDI1MTEzMC4wIKXMDSoASAFQAw%3D%3D" target="_blank">
-        12 bis Rue du Cadran à Charenton-le-Pont
-    </a>).
-</dd>
+                        Après la mairie, retrouvons-nous pour un buffet déjeunatoire à l'espace Toffoli<br>
+                        <a href="https://www.google.com/maps/place/Espace+TOFFOLI/@48.8198189,2.4109002,16z/data=!3m1!4b1!4m6!3m5!1s0x47e672f94f01b00b:0x4af157a05e16b54b!8m2!3d48.8198189!4d2.4134751!16s%2Fg%2F11f3jjpkz5?entry=ttu&g_ep=EgoyMDI1MTEzMC4wIKXMDSoASAFQAw%3D%3D" target="_blank">
+                            12 bis Rue du Cadran à Charenton-le-Pont
+                        </a>
+                    </dd>
+
 
                 </dl>
             </div>
@@ -48,7 +49,7 @@
 
                     <dt>Quand</dt>
                     <dd>Dimanche 11 janvier à 14h</dd>
-                    <!--
+                    
                     <dt>Adresse</dt>
                     <dd>
                         <address>
@@ -58,7 +59,7 @@
                             94220 Charenton-le-Pont
                         </address>
                     </dd>
-                    -->
+                    
                 </dl>
             </div>
         </div>
