mise à jour event v2

--- a/bigday/templates/partials/event.html
+++ b/bigday/templates/partials/event.html
@@ -13,9 +13,8 @@
                         <address>
                             Hôtel de Ville de Charenton-le-Pont<br>
                             <a href="https://www.google.com/maps/dir//Hôtel+de+Ville,+48+Rue+de+Paris,+94220+Charenton-le-Pont/@48.8220374,2.4058804,15z/data=!3m1!5s0x47e672fb8bb24067:0x20361c6c4eecfe90!4m18!1m8!3m7!1s0x47e672fc6b55f2a7:0xd13c253bce39dbe8!2sHôtel+de+Ville!8m2!3d48.8197164!4d2.4160958!15sChhtYWlyaWUgY2hhcmVudG9uIGxlIHBvbnRaGiIYbWFpcmllIGNoYXJlbnRvbiBsZSBwb250kgEJY2l0eV9oYWxsmgEjQ2haRFNVaE5NRzluUzBWSlEwRm5TVU5hYWt4dWJVcFJFQUWqAU0KCy9nLzF0ajFsdjUzEAEyHhABIhrx7xGv_8XWT04hOGG5NmKzulSI50DO_SyI8jIcEAIiGG1haXJpZSBjaGFyZW50b24gbGUgcG9udOABAPoBBAhGEDQ!16s%2Fg%2F11btmq820h!4m8!1m0!1m5!1m1!1s0x47e672fc6b55f2a7:0xd13c253bce39dbe8!2m2!1d2.4160958!2d48.8197164!3e0?entry=ttu&g_ep=EgoyMDI1MTExNy4wIKXMDSoASAFQAw%3D%3D">
-                                48, rue de Paris
+                                48, rue de Paris, 94220 Charenton-le-Pont
                             </a><br>
-                            94220 Charenton-le-Pont
                         </address>
                     </dd>
 
@@ -54,9 +53,8 @@
                     <dd>
                         <address>
                             <a href="https://www.google.com/maps/dir//Synagogue+Charenton+Saint-Maurice,+Rue+des+Bordeaux,+Charenton-le-Pont/@48.8220374,2.4058804,15z/data=!4m9!4m8!1m0!1m5!1m1!1s0x47e672f85eeff03b:0x2acecf6fd83efdd!2m2!1d2.4104816!2d48.822272!3e0?entry=ttu">
-                                41, rue des Bordeaux
+                                41, rue des Bordeaux, 94220 Charenton-le-Pont
                             </a><br>
-                            94220 Charenton-le-Pont
                         </address>
                     </dd>
                     
