--- a/bigday/templates/home.html
+++ b/bigday/templates/home.html
@@ -60,7 +60,7 @@
                         Le jour J approche!
                     </p>
                     <p>
-                        Si vous cherchez des infos sur le déroulé du mariage, vous êtes au bon endroit. Le programme sera complété et <strong style="color: red;">mis à jour très bientôt</strong>. Pensez à revenir régulièrement.
+                        Si vous cherchez des infos sur le déroulé du mariage, vous êtes au bon endroit. Pensez à revenir régulièrement.
                         Merci de confirmer votre présence via le lien que vous avez reçu.
                     </p>
                     <p>
