--- a/bigday/templates/partials/event.html
+++ b/bigday/templates/partials/event.html
@@ -81,9 +81,8 @@
                     <dd>
                         <address>
                             <a href="https://www.google.com/maps/place/Kimpton+St+Honoré+Paris/">
-                                27–29, boulevard des Capucines
+                                27–29, boulevard des Capucines, 75002 Paris
                             </a><br>
-                            75002 Paris
                         </address>
                     </dd>
                 </dl>
