--- a/bigday/templates/partials/event.html
+++ b/bigday/templates/partials/event.html
@@ -80,7 +80,7 @@
                     <dt>Adresse</dt>
                     <dd>
                         <address>
-                            <a href="https://www.google.com/maps/place/Kimpton+St+Honoré+Paris/">
+                            <a href="https://www.google.com/maps/place/Kimpton+St+Honoré+Paris/@48.8700966,2.3281298,17z/data=!3m1!4b1!4m6!3m5!1s0x47e66fd1df0750d5:0x9a40b92d52b14521!8m2!3d48.8700966!4d2.3307047!16s%2Fg%2F11qrqq1y9y?entry=ttu&g_ep=EgoyMDI1MTEzMC4wIKXMDSoASAFQAw%3D%3D">
                                 27–29, boulevard des Capucines, 75002 Paris
                             </a><br>
                         </address>
